--- a/css/index.css
+++ b/css/index.css
@@ -54,8 +54,8 @@ a {
 a:hover {
   color: #eeeeee;
   text-decoration: none;
-  transform: scale(1.2);
-  transition: 0.5s;
+  /* transform: scale(1.2);
+  transition: 0.5s; */
 }
 
 .btn {
